[gd_scene load_steps=4 format=3 uid="uid://ceb23m3y0l0fh"]

[ext_resource type="Texture2D" uid="uid://ctosdrmqgke0f" path="res://assets/skills/icons_skill/48x48/skill_icons1.png" id="1_fnlq5"]
[ext_resource type="Script" uid="uid://bprmwagkso5vq" path="res://scenes/ui/skill_tree/skill_button_skill_tree.gd" id="2_8eg82"]
[ext_resource type="FontFile" uid="uid://bg5tapse57x18" path="res://assets/fonts/PixelOperator8.ttf" id="3_amt1m"]

[node name="SkillButton_SkillTree" type="TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.25, 1.25)
toggle_mode = true
texture_normal = ExtResource("1_fnlq5")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_8eg82")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_amt1m")
theme_override_font_sizes/font_size = 8
text = "Lvl.0/3"
horizontal_alignment = 2
vertical_alignment = 2

[node name="StackLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_amt1m")
theme_override_font_sizes/font_size = 8
text = "99"
horizontal_alignment = 2

[node name="Line2D" type="Line2D" parent="."]
top_level = true
z_index = -1
width = 3.0

[connection signal="pressed" from="." to="." method="_on_pressed"]
